tests/types/errors/bitwise_float_operand.mog
#!strict
f64 value = 1.0;
print(value | 1);
